# test2Dgame

./: CMakeLists.txt
dependencies/glm/: CMakeLists.txt
dependencies/stb_image/: stb_image.cpp
res/shaders/: Shadow.shader  first.glsl
src/: main.cpp
src/game/: Game.cpp  Game.h  SpriteRenderer.cpp  SpriteRenderer.h
src/key_handler/: keyHandler.cpp  keyHandler.h
src/shader/: Shader.cpp  Shader.h
src/textures/: Texture2D.cpp  Texture2D.h  textures_util.cpp  textures_util.h
src/utils/: utils.cpp  utils.h
src/window_manager/: windowManager.cpp  windowManager.h
